updated serial code along parallel for initial

--- a/src_ser/makefile
+++ b/src_ser/makefile
@@ -2,7 +2,7 @@
 include makefile.in
 
 # defining the variables
-objects=meshfree_solver.o data_structure.o point_preprocessor.o parameter.o
+objects=meshfree_solver.o data_structure.o point_preprocessor.o parameter.o initial_conditions.o
 CC=gcc
 
 
@@ -11,7 +11,7 @@ switch = -O3
 execname: $(objects) 
 	$(FC)  -o execname $(switch) $(objects)
 
-meshfree_solver.o:  point_preprocessor.o data_structure.o parameter.o
+meshfree_solver.o:  point_preprocessor.o data_structure.o parameter.o initial_conditions.o
 	$(FC) -c $(switch) meshfree_solver.f90 
 
 point_preprocessor.o: point_preprocessor.f90 data_structure.o
@@ -23,6 +23,8 @@ data_structure.o: data_structure.f90 parameter.o
 parameter.o: parameter.f90 
 	$(FC) -c $(switch) parameter.f90
 
+initial_conditions.o: initial_conditions.f90 data_structure.o 
+	$(FC) -c $(switch) initial_conditions.f90
 
 # Cleaning 
 
