--- a/src_mpi/makefile
+++ b/src_mpi/makefile
@@ -6,21 +6,21 @@ include makefile.in
 
 
 # defining the variables
-objects=meshfree_solver.o data_structure.o point_preprocessor.o parameter.o utilities.o initial_conditions.o
+objects=meshfree_solver.o data_structure.o point_preprocessor.o parameter.o utilities.o
 
 
 
 execname: $(objects)  
 	$(FC)  -o execname $(switch) $(objects) ${PETSC_LIB}
 
-meshfree_solver.o: point_preprocessor.o data_structure.o parameter.o initial_conditions.o
+meshfree_solver.o: point_preprocessor.o data_structure.o parameter.o
 	$(FLINKER) -c  meshfree_solver.F90 
 
 point_preprocessor.o: point_preprocessor.F90 data_structure.o
 	$(FLINKER)  -c  point_preprocessor.F90 
 
 data_structure.o: data_structure.F90 parameter.o 
-	$(FLINKER)  -c  data_structure.F90 
+	$(FC)  -c $(switch) data_structure.F90 
 
 parameter.o: parameter.F90 
 	$(FC)  -c $(switch) parameter.F90 
@@ -28,8 +28,6 @@ parameter.o: parameter.F90
 utilities.o: utilities.F90
 	$(FC) -c $(switch) utilities.F90
 
-initial_conditions.o: initial_conditions.F90 data_structure.o
-	$(FC) -c $(switch) initial_conditions.F90
 
 # Cleaning 
 
