--- a/src_ser/makefile
+++ b/src_ser/makefile
@@ -2,7 +2,7 @@
 include makefile.in
 
 # defining the variables
-objects=meshfree_solver.o data_structure.o point_preprocessor.o parameter.o initial_conditions.o
+objects=meshfree_solver.o data_structure.o point_preprocessor.o parameter.o initial_conditions.o q_lskum.o point_normals.o test.o
 CC=gcc
 
 
@@ -11,7 +11,7 @@ switch = -O3
 execname: $(objects) 
 	$(FC)  -o execname $(switch) $(objects)
 
-meshfree_solver.o:  point_preprocessor.o data_structure.o parameter.o initial_conditions.o
+meshfree_solver.o:  point_preprocessor.o data_structure.o parameter.o initial_conditions.o q_lskum.o
 	$(FC) -c $(switch) meshfree_solver.f90 
 
 point_preprocessor.o: point_preprocessor.f90 data_structure.o
@@ -25,6 +25,15 @@ parameter.o: parameter.f90
 
 initial_conditions.o: initial_conditions.f90 data_structure.o 
 	$(FC) -c $(switch) initial_conditions.f90
+
+q_lskum.o: q_lskum.f90 data_structure.o point_normals.o 
+	$(FC) -c $(switch) q_lskum.f90
+
+point_normals.o: point_normals.f90 data_structure.o  
+	$(FC) -c $(switch) point_normals.f90
+
+test.o: test.f90 
+	$(FC) -c $(switch) test.f90
 
 # Cleaning 
 
