--- a/src_ser/makefile
+++ b/src_ser/makefile
@@ -2,7 +2,7 @@
 include makefile.in
 
 # defining the variables
-objects=meshfree_solver.o data_structure.o point_preprocessor.o parameter.o initial_conditions.o q_lskum.o point_normals.o test.o
+objects=meshfree_solver.o data_structure.o point_preprocessor.o parameter.o initial_conditions.o q_lskum.o point_normals.o test.o generate_connectivity.o fpi_solver.o q_variables.o 
 CC=gcc
 
 
@@ -26,7 +26,7 @@ parameter.o: parameter.f90
 initial_conditions.o: initial_conditions.f90 data_structure.o 
 	$(FC) -c $(switch) initial_conditions.f90
 
-q_lskum.o: q_lskum.f90 data_structure.o point_normals.o 
+q_lskum.o: q_lskum.f90 data_structure.o point_normals.o  generate_connectivity.o fpi_solver.o 
 	$(FC) -c $(switch) q_lskum.f90
 
 point_normals.o: point_normals.f90 data_structure.o  
@@ -34,6 +34,17 @@ point_normals.o: point_normals.f90 data_structure.o
 
 test.o: test.f90 
 	$(FC) -c $(switch) test.f90
+
+generate_connectivity.o: generate_connectivity.f90 data_structure.o
+	$(FC) -c $(switch) generate_connectivity.f90
+
+fpi_solver.o: fpi_solver.f90 data_structure.o q_variables.o
+	$(FC) -c $(switch) fpi_solver.f90
+
+q_variables.o: q_variables.f90 data_structure.o
+	$(FC) -c $(switch) q_variables.f90
+
+
 
 # Cleaning 
 
