--- a/src_mpi/makefile
+++ b/src_mpi/makefile
@@ -6,7 +6,9 @@ include makefile.in
 
 
 # defining the variables
-objects=meshfree_solver.o q_lskum.o parameter.o data_structure.o point_preprocessor.o generate_connectivity.o initial_conditions.o quadrant_fluxes.o wall_fluxes.o split_fluxes.o interior_fluxes.o outer_fluxes.o flux_residual.o fpi_solver.o q_variables.o limiters.o point_normals.o test.o utilities.o
+objects=meshfree_solver.o q_lskum.o parameter.o data_structure.o point_preprocessor.o generate_connectivity.o \
+initial_conditions.o quadrant_fluxes.o wall_fluxes.o split_fluxes.o interior_fluxes.o outer_fluxes.o flux_residual.o \
+fpi_solver.o q_variables.o limiters.o point_normals.o test.o utilities.o state_update.o
 
 
 
@@ -44,7 +46,7 @@ generate_connectivity.o: generate_connectivity.F90 data_structure.o
 test.o: test.F90 data_structure.o 
 	$(FC) -c $(switch) test.F90
 
-fpi_solver.o: fpi_solver.F90 data_structure.o q_variables.o flux_residual.o
+fpi_solver.o: fpi_solver.F90 data_structure.o q_variables.o flux_residual.o state_update.o
 	$(FLINKER) -c fpi_solver.F90
 
 q_variables.o: q_variables.F90 data_structure.o
@@ -67,6 +69,10 @@ interior_fluxes.o: interior_fluxes.F90 split_fluxes.o data_structure.o q_variabl
 
 outer_fluxes.o: outer_fluxes.F90 split_fluxes.o quadrant_fluxes.o q_variables.o limiters.o data_structure.o
 	$(FC) -c $(switch) outer_fluxes.F90
+
+state_update.o: state_update.F90 data_structure.o flux_residual.o
+	$(FC) -c $(switch) state_update.F90
+	
 # Cleaning 
 
 clean::
