serial working, parallel have to check with new indexing system

--- a/src_mpi/makefile
+++ b/src_mpi/makefile
@@ -6,15 +6,19 @@ include makefile.in
 
 
 # defining the variables
-objects=meshfree_solver.o q_lskum.o parameter.o data_structure.o point_preprocessor.o generate_connectivity.o \
+#objects=meshfree_solver.o q_lskum.o parameter.o data_structure.o point_preprocessor.o generate_connectivity.o \
 initial_conditions.o quadrant_fluxes.o wall_fluxes.o split_fluxes.o interior_fluxes.o outer_fluxes.o flux_residual.o \
 fpi_solver.o q_variables.o limiters.o point_normals.o test.o utilities.o state_update.o
+
+objects=meshfree_solver.o parameter.o data_structure.o point_preprocessor.o utilities.o initial_conditions.o q_lskum.o point_normals.o test.o generate_connectivity.o fpi_solver.o q_variables.o flux_residual.o wall_fluxes.o interior_fluxes.o outer_fluxes.o split_fluxes.o limiters.o quadrant_fluxes.o state_update.o
+
 
 
 
 
 execname: $(objects)  
 	$(FC)  -o execname $(switch) $(objects) ${PETSC_LIB}
+
 
 meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure.o parameter.o initial_conditions.o q_lskum.o
 	$(FLINKER) -c  meshfree_solver.F90 
@@ -72,6 +76,9 @@ outer_fluxes.o: outer_fluxes.F90 split_fluxes.o quadrant_fluxes.o q_variables.o 
 
 state_update.o: state_update.F90 data_structure.o flux_residual.o
 	$(FC) -c $(switch) state_update.F90
+
+limiters.o: limiters.F90 data_structure.o
+	$(FC) -c $(switch) limiters.F90
 	
 # Cleaning 
 
