--- a/src_mpi/makefile
+++ b/src_mpi/makefile
@@ -6,9 +6,6 @@ include makefile.in
 
 
 # defining the variables
-#objects=meshfree_solver.o q_lskum.o parameter.o data_structure.o point_preprocessor.o generate_connectivity.o \
-initial_conditions.o quadrant_fluxes.o wall_fluxes.o split_fluxes.o interior_fluxes.o outer_fluxes.o flux_residual.o \
-fpi_solver.o q_variables.o limiters.o point_normals.o test.o utilities.o state_update.o
 
 objects=meshfree_solver.o parameter.o data_structure.o point_preprocessor.o utilities.o initial_conditions.o q_lskum.o point_normals.o test.o generate_connectivity.o fpi_solver.o q_variables.o flux_residual.o wall_fluxes.o interior_fluxes.o outer_fluxes.o split_fluxes.o limiters.o quadrant_fluxes.o state_update.o compute_enstrophy.o objective_function.o miscellaneous.o
 
@@ -17,77 +14,77 @@ objects=meshfree_solver.o parameter.o data_structure.o point_preprocessor.o util
 
 
 execname: $(objects)  
-	$(FC)  -o execname $(switch) $(objects) ${PETSC_LIB}
+	$(FC)  -o execname $(FFLAGS) $(objects) $(PETSC_LIB)
 
 
 meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure.o parameter.o initial_conditions.o q_lskum.o
-	$(FLINKER) -c  meshfree_solver.F90 
+	$(FC) $(FFLAGS) -c  meshfree_solver.F90 
 
 point_preprocessor.o: point_preprocessor.F90 data_structure.o
-	$(FLINKER)  -c  point_preprocessor.F90 
+	$(FC) $(FFLAGS) -c  point_preprocessor.F90 
 
 data_structure.o: data_structure.F90 parameter.o 
-	$(FLINKER)  -c  data_structure.F90 
+	$(FC) $(FFLAGS) -c  data_structure.F90 
 
 parameter.o: parameter.F90 
-	$(FC)  -c $(switch) parameter.F90 
+	$(FC) $(FFLAGS)  -c  parameter.F90 
 
 utilities.o: utilities.F90
-	$(FC) -c $(switch) utilities.F90
+	$(FC) $(FFLAGS) -c  utilities.F90
 
 initial_conditions.o: initial_conditions.F90 data_structure.o
-	$(FC) -c $(switch) initial_conditions.F90
+	$(FC) $(FFLAGS) -c  initial_conditions.F90
 
 q_lskum.o: q_lskum.F90 data_structure.o point_normals.o generate_connectivity.o fpi_solver.o
-	$(FC) -c $(switch) q_lskum.F90
+	$(FC) $(FFLAGS) -c  q_lskum.F90
 
 point_normals.o: point_normals.F90 data_structure.o
-	$(FC) -c $(switch) point_normals.F90
+	$(FC) $(FFLAGS) -c  point_normals.F90
 
 generate_connectivity.o: generate_connectivity.F90 data_structure.o 
-	$(FC) -c $(switch) generate_connectivity.F90
+	$(FC) $(FFLAGS) -c  generate_connectivity.F90
 
 test.o: test.F90 data_structure.o 
-	$(FC) -c $(switch) test.F90
+	$(FC) $(FFLAGS) -c  test.F90
 
 fpi_solver.o: fpi_solver.F90 data_structure.o q_variables.o flux_residual.o state_update.o objective_function.o
-	$(FLINKER) -c fpi_solver.F90
+	$(FC) $(FFLAGS) -c fpi_solver.F90
 
 q_variables.o: q_variables.F90 data_structure.o
-	$(FC) -c $(switch) q_variables.F90
+	$(FC) $(FFLAGS) -c  q_variables.F90
 
 flux_residual.o: flux_residual.F90 data_structure.o parameter.o interior_fluxes.o wall_fluxes.o outer_fluxes.o
-	$(FC) -c $(switch) flux_residual.F90
+	$(FC) $(FFLAGS) -c  flux_residual.F90
 
 quadrant_fluxes.o: quadrant_fluxes.F90 parameter.o
-	$(FC) -c $(switch) quadrant_fluxes.F90
+	$(FC) $(FFLAGS) -c  quadrant_fluxes.F90
 
 wall_fluxes.o: wall_fluxes.F90 quadrant_fluxes.o split_fluxes.o data_structure.o q_variables.o limiters.o
-	$(FC) -c $(switch) wall_fluxes.F90
+	$(FC) $(FFLAGS) -c  wall_fluxes.F90
 
 split_fluxes.o: split_fluxes.F90 parameter.o
-	$(FC) -c $(switch) split_fluxes.F90
+	$(FC) $(FFLAGS) -c  split_fluxes.F90
 
 interior_fluxes.o: interior_fluxes.F90 split_fluxes.o data_structure.o q_variables.o limiters.o
-	$(FC) -c $(switch) interior_fluxes.F90
+	$(FC) $(FFLAGS) -c  interior_fluxes.F90
 
 outer_fluxes.o: outer_fluxes.F90 split_fluxes.o quadrant_fluxes.o q_variables.o limiters.o data_structure.o
-	$(FC) -c $(switch) outer_fluxes.F90
+	$(FC) $(FFLAGS) -c  outer_fluxes.F90
 
 state_update.o: state_update.F90 data_structure.o flux_residual.o
-	$(FC) -c $(switch) state_update.F90
+	$(FC) $(FFLAGS) -c  state_update.F90
 
 limiters.o: limiters.F90 data_structure.o
-	$(FC) -c $(switch) limiters.F90
+	$(FC) $(FFLAGS) -c  limiters.F90
 	
 objective_function.o: objective_function.F90 data_structure.o  compute_enstrophy.o
-	$(FLINKER) -c $(switch) objective_function.F90
+	$(FC) $(FFLAGS) -c  objective_function.F90
 	
 compute_enstrophy.o: compute_enstrophy.F90 data_structure.o
-	$(FC) -c $(switch) compute_enstrophy.F90
+	$(FC) $(FFLAGS) -c  compute_enstrophy.F90
 
 miscellaneous.o: miscellaneous.F90
-	$(FC) -c $(switch) miscellaneous.F90
+	$(FC) $(FFLAGS) -c  miscellaneous.F90
 # Cleaning 
 
 clean::
