--- a/examples/parameter.in
+++ b/examples/parameter.in
@@ -8,4 +8,4 @@
 -initial_conditions_flag 0 |  default=0 | options : 1, externally intialize
 -interior_points_normal_flag 0 |  default=0 
 -shapes 1 |  default=1, increase it according to the case
--solution_restart 0 | default=0 | options: 1, restart from a particular point with same number of procs
+-obj_flag | default=0
