few more implicit code changes, still not tested
Former-commit-id: 57fdeb48dae66703a60dc3ae8962cc9fd1ed87fc

--- a/examples/makefile
+++ b/examples/makefile
@@ -10,7 +10,7 @@ all:
 	cp -r $(SRCDIR) src
 	cd src && make -f makefile clean
 	cp parameter.F90 src/
-	cd src && make -f makefile execname 
+	cd src && make -j -f makefile execname 
 	mv src/execname .
 	@echo "Built solver"
 
