fully double precision
Former-commit-id: 7434f2172ec86f99c970f14e63a07b443c73cca6

--- a/src/makefile.in
+++ b/src/makefile.in
@@ -14,6 +14,8 @@ CC = gcc
 #FFLAGS = -O3 -xHost -ipo -I$(PETSC_DIR)/include
 
 
+#flags for gcc(profiling)
+#FFLAGS =-march=native -O3 -pg -I$(PETSC_DIR)/include
 #flags for gcc
 FFLAGS =-march=native -O3 -I$(PETSC_DIR)/include
 
