--- a/src_cuda/makefile
+++ b/src_cuda/makefile
@@ -2,12 +2,9 @@
 
 include makefile.in
 
-
-
-
 # defining the variables
 
-objects=meshfree_solver.o parameter.o data_structure.o point_preprocessor.o initial_conditions.o q_lskum.o point_normals.o  generate_connectivity.o device_data_structure.o post_processing.o 
+objects=meshfree_solver.o parameter.o data_structure.o point_preprocessor.o initial_conditions.o q_lskum.o point_normals.o  generate_connectivity.o device_data_structure.o post_processing.o q_variables.o compute_delta.o flux_residual.o state_update.o
 
 execname: $(objects)  
 	$(FC)  -o execname $(FFLAGS) $(objects)
@@ -31,7 +28,7 @@ device_data_structure.o: device_data_structure.F90 parameter.o data_structure.o
 initial_conditions.o: initial_conditions.F90 data_structure.o parameter.o
 	$(FC) $(FFLAGS) -c  initial_conditions.F90
 
-q_lskum.o: q_lskum.F90 data_structure.o point_normals.o generate_connectivity.o 
+q_lskum.o: q_lskum.F90 data_structure.o point_normals.o generate_connectivity.o q_variables.o compute_delta.o state_update.o
 	$(FC) $(FFLAGS) -c  q_lskum.F90
 
 point_normals.o: point_normals.F90 data_structure.o
@@ -42,6 +39,18 @@ generate_connectivity.o: generate_connectivity.F90 data_structure.o
 
 post_processing.o: post_processing.F90 data_structure.o
 	$(FC) $(FFLAGS) -c  post_processing.F90
+
+q_variables.o: q_variables.F90 device_data_structure.o
+	$(FC) $(FFLAGS) -c  q_variables.F90
+
+compute_delta.o: compute_delta.F90 device_data_structure.o
+	$(FC) $(FFLAGS) -c  compute_delta.F90
+
+flux_residual.o: flux_residual.F90 device_data_structure.o
+	$(FC) $(FFLAGS) -c  flux_residual.F90
+
+state_update.o: state_update.F90 device_data_structure.o
+	$(FC) $(FFLAGS) -c  state_update.F90
 
 clean::
 	rm -rf *.mod execname *.o
