edited revolve algo
Former-commit-id: 69b686bed516492e1c4905d6370a8b4c535e55b9

--- a/src_adjoint/makefile
+++ b/src_adjoint/makefile
@@ -44,7 +44,7 @@ readcase.o: readcase.F90 data_structure_b.o petsc_data_structure.o
 utilities.o: utilities.F90
 	$(FC) $(FFLAGS) -c  utilities.F90
 
-initial_conditions.o: initial_conditions.F90 data_structure_b.o parameter.o
+initial_conditions.o: initial_conditions.F90 data_structure_b.o parameter.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  initial_conditions.F90
 
 q_lskum_bbox_b.o: q_lskum_bbox_b.F90 data_structure_b.o point_normals_b.o generate_connectivity_b.o fpi_solver_b.o 
