updated some case parameters and examples
Former-commit-id: 4db4b087dc726cb41e13821396072ebdd099175d

--- a/examples/cuda/makefile
+++ b/examples/cuda/makefile
@@ -2,41 +2,34 @@ ifndef MF_DIR
 	$(error directory not set)
 endif
 
-SRCDIRM=$(MF_DIR)/src_mpi
-SRCDIRC=$(MF_DIR)/src_cuda
+SRCDIR=$(MF_DIR)/src_cuda
 
-all:
-	@echo "make cpu or gpu"
-
-cpu: 
+gpu: 
 	rm -rf src
-	cp -r $(SRCDIRM) src
+	cp -r $(SRCDIR) src
 	cd src && make -f makefile clean
 	cp parameter.F90 src/
 	cd src && make -j -f makefile execname 
 	mv src/execname .
-	mv src/poly .
-	@echo "Built cpu solver"
-
-gpu: 
-	rm -rf src
-	cp -r $(SRCDIRC) src
-	cd src && make -f makefile clean
-	cp parameter* limiter.h src/
-	cd src && make -j -f makefile execname 
-	mv src/execname .
 	@echo "Built gpu solver"
+
+point:
+	cp -r $(MF_DIR)/mfpre .
+	cd mfpre && make -f makefile 
+	cp mfpre/graphpart .
+	rm -rf mfpre
 
 cp:
 	python3 cpplot.py
 
 tec:
+	cp src/poly .
+	cp $(MF_DIR)/examples/cuda/tec_conversion.F90 .
 	./poly preprocessorfile.poly
 	rm -rf preprocessorfile.1.node preprocessorfile.1.poly primal.1.ele
 	gfortran tec_conversion.F90
 	./a.out
-	rm a.out
-
+	rm a.out poly
 
 clean:
 	rm -rf src cpplot_*
