--- a/src_forward/makefile.in
+++ b/src_forward/makefile.in
@@ -3,21 +3,21 @@ include ${PETSC_DIR}/lib/petsc/conf/rules
 
 
 #Intel compiler
-#FC = mpiifort
+#FC = mpifort
+#CC = icc
+#flags for intel compiler
+#FFLAGS = -O3 -I$(PETSC_DIR)/include
 
 #gcc compiler
-#FC = mpif90
-
+FC = mpif90
 CC = gcc
-
-#flags for intel compiler
-FFLAGS = -O3 -I$(PETSC_DIR)/include
-
-
 #flags for gcc(profiling)
 #FFLAGS =-march=native -O3 -pg -I$(PETSC_DIR)/include
 #flags for gcc
-#FFLAGS =-march=native -O3 -I$(PETSC_DIR)/include
+FFLAGS =-march=native -O3 -ffree-line-length-512 -I$(PETSC_DIR)/include
+
+
+
 
 
 
