postprocessing for naca0012 case
Former-commit-id: 7ac521266e19cf65f6723fbaaf7d035a0556d87a

--- a/examples/cuda/makefile
+++ b/examples/cuda/makefile
@@ -13,23 +13,11 @@ gpu:
 	mv src/execname .
 	@echo "Built gpu solver"
 
-point:
+input:
 	cp -r $(MF_DIR)/mfpre .
 	cd mfpre && make -f makefile 
 	cp mfpre/graphpart .
 	rm -rf mfpre
-
-cp:
-	python3 cpplot.py
-
-tec:
-	cp src/poly .
-	cp $(MF_DIR)/examples/cuda/tec_conversion.F90 .
-	./poly preprocessorfile.poly
-	rm -rf preprocessorfile.1.node preprocessorfile.1.poly primal.1.ele
-	gfortran tec_conversion.F90
-	./a.out
-	rm a.out poly
 
 clean:
 	rm -rf src cpplot_*
