--- a/src_forward/makefile
+++ b/src_forward/makefile
@@ -7,18 +7,21 @@ include makefile.in
 
 # defining the variables
 
-objects=meshfree_solver.o parameter.o data_structure_d.o petsc_data_structure.o point_preprocessor.o utilities.o initial_conditions.o q_lskum_d.o point_normals_d.o  generate_connectivity_d.o fpi_solver_d.o q_variables_d.o flux_residual_d.o wall_fluxes_d.o interior_fluxes_d.o outer_fluxes_d.o split_fluxes_d.o limiters_d.o quadrant_fluxes_d.o state_update_d.o miscellaneous.o readcase.o objective_function_d.o compute_force_coeffs_d.o compute_entropy_d.o compute_enstrophy_d.o 
+objects=meshfree_solver.o parameter.o data_structure_d.o petsc_data_structure.o point_preprocessor.o utilities.o initial_conditions.o q_lskum_d.o point_normals_d.o  generate_connectivity_d.o fpi_solver_d.o q_variables_d.o flux_residual_d.o wall_fluxes_d.o interior_fluxes_d.o outer_fluxes_d.o split_fluxes_d.o limiters_d.o quadrant_fluxes_d.o state_update_d.o readcase.o objective_function_d.o compute_force_coeffs_d.o compute_entropy_d.o compute_enstrophy_d.o post_processing.o
 
 
 execname: $(objects)  
 	$(FC)  -o execname $(FFLAGS) $(objects) $(PETSC_LIB)
 
 
-meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure_d.o petsc_data_structure.o parameter.o initial_conditions.o q_lskum_d.o  
+meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure_d.o petsc_data_structure.o parameter.o q_lskum_d.o post_processing.o
 	$(FC) $(FFLAGS) -c  meshfree_solver.F90 
 
 point_preprocessor.o: point_preprocessor.F90 data_structure_d.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  point_preprocessor.F90 
+
+post_processing.o: post_processing.F90 data_structure_d.o petsc_data_structure.o
+	$(FC) $(FFLAGS) -c  post_processing.F90 
 
 data_structure_d.o: data_structure_d.F90 parameter.o 
 	$(FC) $(FFLAGS) -c  data_structure_d.F90 
@@ -38,7 +41,7 @@ utilities.o: utilities.F90
 initial_conditions.o: initial_conditions.F90 data_structure_d.o parameter.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  initial_conditions.F90
 
-q_lskum_d.o: q_lskum_d.F90 data_structure_d.o point_normals_d.o generate_connectivity_d.o fpi_solver_d.o 
+q_lskum_d.o: q_lskum_d.F90 data_structure_d.o point_normals_d.o generate_connectivity_d.o fpi_solver_d.o initial_conditions.o
 	$(FC) $(FFLAGS) -c  q_lskum_d.F90
 
 point_normals_d.o: point_normals_d.F90 data_structure_d.o
@@ -89,12 +92,5 @@ compute_enstrophy_d.o: compute_enstrophy_d.F90 data_structure_d.o petsc_data_str
 compute_entropy_d.o: compute_entropy_d.F90 data_structure_d.o petsc_data_structure.o
 	$(FC) $(FFLAGS) -c  compute_entropy_d.F90
 
-miscellaneous.o: miscellaneous.F90
-	$(FC) $(FFLAGS) -c  miscellaneous.F90
-
 clean::
 	rm -rf *.mod execname *.o
-
-# End of makefile ..
-
-
