changes to src_Cuda
Former-commit-id: 9ccc4dd30527cd39e5b3c4c01696163975dfb4ed

--- a/src_cuda/makefile.in
+++ b/src_cuda/makefile.in
@@ -1,4 +1,6 @@
 #pgi compiler
 FC = pgfortran
 
-FFLAGS =-O3 -Mcuda=rdc -Mcuda=lineinfo
+#when using cuda-memcheck, use this flag: -ta=nvidia,lineinfo
+
+FFLAGS =-O3 -Mcuda=rdc -Mcuda=lineinfo -Mcuda=keepptx
