changes in makefile
Former-commit-id: fb38c6ab698cf2c3a2ef1172f1b133b0dceed443

--- a/examples/mpi/adjoint/makefile
+++ b/examples/mpi/adjoint/makefile
@@ -4,26 +4,23 @@ endif
 
 SRCDIR=$(MF_DIR)/src_adjoint
 
-all:
-	@echo "make explicit or implicit"
-
-explicit: 
+shape: 
 	rm -rf src
 	cp -r $(SRCDIR) src
-	cd src && cp explicit/* . && make -f makefile clean
+	cd src && cp shape_sensitivity/* . && mv point_preprocessor_shape.F90 point_preprocessor.F90 && mv data_structure_shape.F90 data_structure_b.F90 && make -f makefile clean
 	cp parameter.F90 src/
 	cd src && make -j -f makefile execname 
 	mv src/execname .
-	@echo "Built explicit solver"
+	@echo "Built mpi adjoint solver for pure shape sensitivities"
 
-implicit: 
+aoa: 
 	rm -rf src
 	cp -r $(SRCDIR) src
-	cd src && cp implicit/* . && make -f makefile clean
+	cd src && cp aoa_sensitivity/* . && mv point_preprocessor_aoa.F90 point_preprocessor.F90 && mv data_structure_aoa.F90 data_structure_b.F90 && make -f makefile clean
 	cp parameter.F90 src/
 	cd src && make -j -f makefile execname 
 	mv src/execname .
-	@echo "Built implicit solver"
+	@echo "Built mpi adjoint solver for aoa based shape sensitivities"
 
 input:
 	cp -r $(MF_DIR)/mfpre .
