changes from gah-2019
Former-commit-id: 7516fb94b202f304b487b71e2ed37c9d3260e065

--- a/src_cuda/makefile.in
+++ b/src_cuda/makefile.in
@@ -3,4 +3,4 @@ FC = pgfortran
 
 #when using cuda-memcheck, use this flag: -ta=nvidia,lineinfo
 
-FFLAGS =-O3 -Mcuda=rdc -Mcuda=lineinfo -Mcuda=keepptx
+FFLAGS = -O3 -Mcuda=nordc,lineinfo -Mcuda=keepptx,ptxinfo
