--- a/src_cuda/makefile
+++ b/src_cuda/makefile
@@ -4,21 +4,27 @@ include makefile.in
 
 # defining the variables
 
-objects=meshfree_solver.o parameter.o data_structure.o point_preprocessor.o initial_conditions.o q_lskum.o point_normals.o  generate_connectivity.o device_data_structure.o post_processing.o q_variables.o flux_residual.o state_update.o objective_function.o compute_force_coeffs.o adaptation_sensors.o compute_entropy.o
+objects=meshfree_solver.o parameter.o data_structure.o point_preprocessor.o initial_conditions.o point_normals.o  generate_connectivity.o post_processing.o objective_function.o compute_force_coeffs.o adaptation_sensors.o compute_entropy.o cuda.o
 
-execname: $(objects)  
-	cd triangle/ && make clean && make
-	cp triangle/triangle poly
+
+TARGET = execname
+
+all:
+	cat device_data_structure.cuf q_variables.cuf flux_residual.cuf state_update.cuf  q_lskum.cuf> cuda.cuf
+	make -f makefile $(TARGET)
+
+
+$(TARGET): $(objects) 
 	$(FC) -o execname $(FFLAGS) $(objects)
 
 
-meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure.o parameter.o initial_conditions.o q_lskum.o post_processing.o objective_function.o adaptation_sensors.o
+meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure.o parameter.o initial_conditions.o cuda.o post_processing.o objective_function.o adaptation_sensors.o
 	$(FC) $(FFLAGS) -c  meshfree_solver.F90 
 
 parameter.o: parameter.F90
 	$(FC) $(FFLAGS)  -c  parameter.F90
 
-point_preprocessor.o: point_preprocessor.F90 data_structure.o device_data_structure.o
+point_preprocessor.o: point_preprocessor.F90 data_structure.o cuda.o
 	$(FC) $(FFLAGS) -c  point_preprocessor.F90 
 
 data_structure.o: data_structure.F90 parameter.o
@@ -27,14 +33,12 @@ data_structure.o: data_structure.F90 parameter.o
 adaptation_sensors.o: adaptation_sensors.F90 data_structure.o
 	$(FC) $(FFLAGS) -c  adaptation_sensors.F90
 
-device_data_structure.o: device_data_structure.F90 parameter.o data_structure.o
-	$(FC) $(FFLAGS) -c  device_data_structure.F90
 
 initial_conditions.o: initial_conditions.F90 data_structure.o parameter.o
 	$(FC) $(FFLAGS) -c  initial_conditions.F90
 
-q_lskum.o: q_lskum.F90 data_structure.o point_normals.o generate_connectivity.o q_variables.o state_update.o flux_residual.o post_processing.o
-	$(FC) $(FFLAGS) -c  q_lskum.F90
+cuda.o: cuda.cuf initial_conditions.o generate_connectivity.o point_normals.o post_processing.o data_structure.o parameter.o 
+	$(FC) $(FFLAGS) -c  cuda.cuf
 
 point_normals.o: point_normals.F90 data_structure.o
 	$(FC) $(FFLAGS) -c  point_normals.F90
@@ -44,15 +48,6 @@ generate_connectivity.o: generate_connectivity.F90 data_structure.o
 
 post_processing.o: post_processing.F90 data_structure.o
 	$(FC) $(FFLAGS) -c  post_processing.F90
-
-q_variables.o: q_variables.F90 device_data_structure.o
-	$(FC) $(FFLAGS) -c  q_variables.F90
-
-flux_residual.o: flux_residual.F90 device_data_structure.o
-	$(FC) $(FFLAGS) -c  flux_residual.F90
-
-state_update.o: state_update.F90 device_data_structure.o
-	$(FC) $(FFLAGS) -c  state_update.F90
 
 objective_function.o: objective_function.F90 data_structure.o compute_force_coeffs.o compute_entropy.o
 	$(FC) $(FFLAGS) -c  objective_function.F90
@@ -64,4 +59,4 @@ compute_entropy.o: compute_entropy.F90 data_structure.o
 	$(FC) $(FFLAGS) -c  compute_entropy.F90
 
 clean::
-	rm -rf *.mod execname *.o
+	rm -rf *.mod execname *.o *.ptx poly cuda.cuf
