--- a/examples/cuda/makefile
+++ b/examples/cuda/makefile
@@ -9,7 +9,7 @@ gpu:
 	cp -r $(SRCDIR) src
 	cd src && make -f makefile clean
 	cp parameter.F90 src/
-	cd src && make -j -f makefile execname 
+	cd src && make -j -f makefile 
 	mv src/execname .
 	@echo "Built gpu solver"
 
