--- a/examples/naca0012-structured/makefile
+++ b/examples/naca0012-structured/makefile
@@ -2,16 +2,16 @@ ifndef MF_DIR
 	$(error directory not set)
 endif
 
-SRCDIR=$(MF_DIR)/src_mpi
+SRCDIR=$(MF_DIR)/src_adjoint
 
 all: 
 	rm -rf src
 	cp -r $(SRCDIR) src
-	cd src && make -f makefile clean
+	cd src && cp adjoint/* . && make -f makefile clean
 	cp parameter.F90 src/
 	cd src && make -j -f makefile execname 
 	mv src/execname .
-	@echo "Built mpi solver"
+	@echo "Built mpi adjoint solver"
 
 input:
 	cp -r $(MF_DIR)/mfpre .
@@ -20,5 +20,5 @@ input:
 	rm -rf mfpre
 
 clean:
-	rm -rf src point
-	rm -f execname graphpart
+	rm -rf src
+	rm -f execname
