--- a/src_mpi/makefile
+++ b/src_mpi/makefile
@@ -7,47 +7,38 @@ include makefile.in
 
 # defining the variables
 
-objects=meshfree_solver.o parameter.o data_structure.o petsc_data_structure.o point_preprocessor.o utilities.o initial_conditions.o q_lskum.o point_normals.o  generate_connectivity.o fpi_solver.o q_variables.o flux_residual.o wall_fluxes.o interior_fluxes.o outer_fluxes.o split_fluxes.o limiters.o quadrant_fluxes.o state_update.o readcase.o post_processing.o objective_function.o compute_force_coeffs.o compute_entropy.o compute_enstrophy.o q_lskum_petsc.o
+objects=meshfree_solver.o parameter.o data_structure.o point_preprocessor.o utilities.o initial_conditions.o q_lskum.o point_normals.o  generate_connectivity.o fpi_solver.o q_variables.o flux_residual.o wall_fluxes.o interior_fluxes.o outer_fluxes.o split_fluxes.o limiters.o quadrant_fluxes.o state_update.o post_processing.o objective_function.o compute_force_coeffs.o compute_entropy.o compute_enstrophy.o
 
 
 execname: $(objects)  
-	$(FC)  -o execname $(FFLAGS) $(objects) $(PETSC_LIB) $(LIBS)
+	$(FC)  -o execname $(FFLAGS) $(objects) $(LIBS)
 
 
-meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure.o petsc_data_structure.o parameter.o q_lskum.o post_processing.o compute_force_coeffs.o q_lskum_petsc.o
+meshfree_solver.o: meshfree_solver.F90 point_preprocessor.o data_structure.o parameter.o q_lskum.o post_processing.o compute_force_coeffs.o
 	$(FC) $(FFLAGS) -c  meshfree_solver.F90 
 
-point_preprocessor.o: point_preprocessor.F90 data_structure.o petsc_data_structure.o
+point_preprocessor.o: point_preprocessor.F90 data_structure.o
 	$(FC) $(FFLAGS) -c  point_preprocessor.F90 
 
 data_structure.o: data_structure.F90 parameter.o 
 	$(FC) $(FFLAGS) -c  data_structure.F90 
 
-petsc_data_structure.o: petsc_data_structure.F90 parameter.o data_structure.o
-	$(FC) $(FFLAGS) -c  petsc_data_structure.F90 
-
 parameter.o: parameter.F90 
 	$(FC) $(FFLAGS)  -c  parameter.F90 
-
-readcase.o: readcase.F90 data_structure.o petsc_data_structure.o
-	$(FC) $(FFLAGS) -c  readcase.F90 
 
 utilities.o: utilities.F90
 	$(FC) $(FFLAGS) -c  utilities.F90
 
-initial_conditions.o: initial_conditions.F90 data_structure.o parameter.o petsc_data_structure.o
+initial_conditions.o: initial_conditions.F90 data_structure.o parameter.o 
 	$(FC) $(FFLAGS) -c  initial_conditions.F90
 
 q_lskum.o: q_lskum.F90 data_structure.o point_normals.o generate_connectivity.o fpi_solver.o initial_conditions.o
 	$(FC) $(FFLAGS) -c  q_lskum.F90
 
-q_lskum_petsc.o: q_lskum_petsc.F90 data_structure.o point_normals.o generate_connectivity.o initial_conditions.o petsc_data_structure.o state_update.o
-	$(FC) $(FFLAGS) -c  q_lskum_petsc.F90
-
 point_normals.o: point_normals.F90 data_structure.o
 	$(FC) $(FFLAGS) -c  point_normals.F90
 
-generate_connectivity.o: generate_connectivity.F90 data_structure.o petsc_data_structure.o
+generate_connectivity.o: generate_connectivity.F90 data_structure.o 
 	$(FC) $(FFLAGS) -c  generate_connectivity.F90
 
 fpi_solver.o: fpi_solver.F90 data_structure.o q_variables.o flux_residual.o state_update.o objective_function.o post_processing.o 
@@ -83,16 +74,16 @@ limiters.o: limiters.F90 data_structure.o
 objective_function.o: objective_function.F90 data_structure.o  compute_enstrophy.o compute_entropy.o compute_force_coeffs.o
 	$(FC) $(FFLAGS) -c  objective_function.F90
 	
-compute_force_coeffs.o: compute_force_coeffs.F90 data_structure.o petsc_data_structure.o
+compute_force_coeffs.o: compute_force_coeffs.F90 data_structure.o 
 	$(FC) $(FFLAGS) -c  compute_force_coeffs.F90
 
-compute_enstrophy.o: compute_enstrophy.F90 data_structure.o petsc_data_structure.o
+compute_enstrophy.o: compute_enstrophy.F90 data_structure.o 
 	$(FC) $(FFLAGS) -c  compute_enstrophy.F90
 
-compute_entropy.o: compute_entropy.F90 data_structure.o petsc_data_structure.o
+compute_entropy.o: compute_entropy.F90 data_structure.o 
 	$(FC) $(FFLAGS) -c  compute_entropy.F90
 
-post_processing.o: data_structure.o petsc_data_structure.o
+post_processing.o: data_structure.o 
 	$(FC) $(FFLAGS) -c  post_processing.F90
 
 clean::
