Update differentiated code

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@ execname
 examples/forward/src/*
 examples/adjoint/src/*
 examples/serial/src/*
+examples/adjoint/runs/*
+examples/forward/runs/*
+
+
